add double swirl, tune default val in schema, update explanation

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -615,7 +615,7 @@
 	"edt_eff_pacman_header" : "Pac-Man",
 	"edt_eff_moodblobs_header" : "Stimmungskugeln",
 	"edt_eff_swirl_header" : "Farbwirbel",
-	"edt_eff_swirl_header_desc" : "Ein Wirbel mit frei wählbaren Farben. Die Farben werden gleichmäßig auf 360° aufgeteilt, dazwischen werden Farbübergänge berechnet. Der Mittelpunkt kann fest eingestellt oder bei jedem Start zufällig berechnet werden. Tipp: Eine Widerholung der selben Farbe erhöht deren \"größe\" und verringert den Bereich des Farbübergangs zu benachbarten Farben.",
+	"edt_eff_swirl_header_desc" : "Ein Wirbel mit frei wählbaren Farben. Die Farben werden gleichmäßig auf 360° aufgeteilt, dazwischen werden Farbübergänge berechnet. Zusätzlich kann ein zweiter Wirbel über den Ersten gelegt werden (Transparenz beachten!). Tipp: Eine Widerholung der selben Farbe erhöht deren \"größe\" und verringert den Bereich des Farbübergangs zu benachbarten Farben.",
 	"edt_eff_random_header" : "Zufällig",
 	"edt_eff_runningdots_header" : "Rennende Punkte",
 	"edt_eff_systemshutdown_header" : "Herunterfahren",
@@ -688,6 +688,7 @@
 	"edt_eff_margin" : "Abstand",
 	"edt_eff_customColor" : "Benutzerdefinierte Farbe",
 	"edt_eff_randomCenter" : "Zufälliger Mittelpunkt",
+	"edt_eff_enableSecondSwirl":"Zweiter Wirbel",
 	"edt_append_ns" : "ns",
 	"edt_append_ms" : "ms",
 	"edt_append_s" : "s",
