--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -616,7 +616,7 @@
 	"edt_eff_pacman_header" : "Pac-Man",
 	"edt_eff_moodblobs_header" : "Mood Blobs",
 	"edt_eff_swirl_header" : "Color Swirl",
-	"edt_eff_swirl_header_desc" : "A swirl with custom colors. Colors are even spread to 360°, in between colors shifts will be calcualted. You could set a fixed center position or let it calculate random on each start. Hint: A reapeat of the same color results in a \"hugher\" color area and a reduced color shift area.",
+	"edt_eff_swirl_header_desc" : "A swirl with custom colors. Colors are even spread to 360°, in between colors shifts will be calcualted. Additional you can add a second swirl on top, be aware that you need partly transparency! Hint: A reapeat of the same color results in a \"hugher\" color area and a reduced color shift area.",
 	"edt_eff_random_header" : "Random",
 	"edt_eff_runningdots_header" : "Running Dots",
 	"edt_eff_systemshutdown_header" : "System Shutdown",
@@ -689,6 +689,7 @@
 	"edt_eff_margin" : "Margin",
 	"edt_eff_customColor" : "Custom Color",
 	"edt_eff_randomCenter" : "Random Center",
+	"edt_eff_enableSecondSwirl":"Second Swirl",
 	"edt_append_ns" : "ns",
 	"edt_append_ms" : "ms",
 	"edt_append_s" : "s",
