--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -604,9 +604,17 @@
 	"edt_conf_log_heading_title" : "Logging",
 	"edt_conf_log_level_title" : "Log-Level",
 	"edt_conf_log_level_expl" : "Depending on loglevel you see less or more messages in your log.",
+	"edt_eff_smooth_custom_title" : "Enable smoothing",
+	"edt_eff_smooth_time_ms_title" : "Smoothing time",
+	"edt_eff_smooth_updateFrequency_title" : "Smoothing update frequency",
+	"edt_eff_smooth_updateDelay_title" : "Smoothing update delay",
+	"edt_eff_smooth_pause_title" : "Pause smoothing",
 	"edt_eff_candle_header" : "Candle",
+	"edt_eff_candle_header_desc" : "Shimmering candles",
 	"edt_eff_police_header" : "Police",
+	"edt_eff_police_header_desc" : "Lights like a police car in action",
 	"edt_eff_fade_header" : "Fade",
+	"edt_eff_fade_header_desc" : "Fades between colors",
 	"edt_eff_rainbowmood_header" : "Rainbow Mood",
 	"edt_eff_rainbowmood_header_desc" : "All leds rainbow mood",
 	"edt_eff_knightrider_header" : "Knight Rider",
