--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -93,6 +93,7 @@
 	"conf_general_impexp_l2" : "Exportiere eine Konfiguration, indem du auf \"Exportieren\" klickst. Dein Browser startet einen Download.",
 	"conf_general_impexp_impbtn" : "Importieren",
 	"conf_general_impexp_expbtn" : "Exportieren",
+	"conf_general_instances_intro" : "Erstelle, starte und stoppe Hyperion Instanzen um zusätzliche LED Hardware mit den selben Quellen nutzen zu können via Hyperion Weiterleitung.",
 	"conf_helptable_option" : "Option",
 	"conf_helptable_expl" : "Erklärung",
 	"conf_effect_path_intro" : "Definiere weitere Effekt-Pfade, wenn nötig.",
@@ -603,6 +604,12 @@
 	"edt_conf_log_heading_title" : "Protokoll",
 	"edt_conf_log_level_title" : "Protokollstufe",
 	"edt_conf_log_level_expl" : "Abhängig der Stufe sind weniger oder mehr Meldungen sichtbar.",
+	"edt_conf_inst_heading_title" : "Instanz Management",
+	"edt_conf_inst_title" : "Instanz",
+	"edt_conf_inst_enabled_title" : "Aktiviere Instanz",
+	"edt_conf_inst_enabled_expl" : "Aktiviert oder deaktiviert diese Instanz.",
+	"edt_conf_inst_instName_title" : "Instanzname",
+	"edt_conf_inst_instName_expl" : "Name der Hyperion Instanz. Es ist nicht möglich Namen nachträglich zu ändern, da diese als neue Instanz erkannt werden.",
 	"edt_eff_smooth_custom_title" : "Aktivere Glättung",
 	"edt_eff_smooth_time_ms_title" : "Glättung: Zeit",
 	"edt_eff_smooth_updateFrequency_title" : "Glättung: Aktualisierungsfrequenz",
@@ -618,7 +625,7 @@
 	"edt_eff_knightrider_header" : "Knight Rider",
 	"edt_eff_knightrider_header_desc" : "K.I.T.T ist zurück! Der Front-Scanner des bekannten Autos, diesmal nicht nur in rot.",
 	"edt_eff_lightclock_header" : "Lichtuhr",
-	"edt_eff_lightclock_header_desc" : "Eine echte Uhr als Licht! Passe die Farben von Stunden, Minuten, Sekunden deinen Vorstellungen an. Optional können 3/6/9/12 Uhr Markierungen aktiviert werden. Sollte die Uhr eine falsche Zeit anzeigen, überprüfe die Uhrzeit deines Systems.", 
+	"edt_eff_lightclock_header_desc" : "Eine echte Uhr als Licht! Passe die Farben von Stunden, Minuten, Sekunden deinen Vorstellungen an. Optional können 3/6/9/12 Uhr Markierungen aktiviert werden. Sollte die Uhr eine falsche Zeit anzeigen, überprüfe die Uhrzeit deines Systems.",
 	"edt_eff_pacman_header" : "Pac-Man",
 	"edt_eff_moodblobs_header" : "Stimmungskugeln",
 	"edt_eff_swirl_header" : "Farbwirbel",
