--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -93,6 +93,7 @@
 	"conf_general_impexp_l2" : "Export a configuration by clicking on \"Export\". Your browser starts a download.",
 	"conf_general_impexp_impbtn" : "Import",
 	"conf_general_impexp_expbtn" : "Export",
+	"conf_general_instances_intro" : "Create, start and stop new Hyperion instances which can be used to control multiple led hardware with the same source image delivered via Hyperion forwarder!",
 	"conf_helptable_option" : "Option",
 	"conf_helptable_expl" : "Explanation",
 	"conf_effect_path_intro" : "Define more effect paths if necessary.",
@@ -604,6 +605,12 @@
 	"edt_conf_log_heading_title" : "Logging",
 	"edt_conf_log_level_title" : "Log-Level",
 	"edt_conf_log_level_expl" : "Depending on loglevel you see less or more messages in your log.",
+	"edt_conf_inst_heading_title" : "Instanz management",
+	"edt_conf_inst_title" : "Instanz",
+	"edt_conf_inst_enabled_title" : "Enable instance",
+	"edt_conf_inst_enabled_expl" : "Enables or disables this instance.",
+	"edt_conf_inst_instName_title" : "Instance name",
+	"edt_conf_inst_instName_expl" : "Pretty name of this Hyperion instance. Don't edit names afterwards, it will be treated as a new instance.",
 	"edt_eff_smooth_custom_title" : "Enable smoothing",
 	"edt_eff_smooth_time_ms_title" : "Smoothing time",
 	"edt_eff_smooth_updateFrequency_title" : "Smoothing update frequency",
@@ -620,7 +627,7 @@
 	"edt_eff_knightrider_header" : "Knight Rider",
 	"edt_eff_knightrider_header_desc" : "K.I.T.T is back! The front-scanner of the well known car, this time not just in red.",
 	"edt_eff_lightclock_header" : "Light Clock",
-	"edt_eff_lightclock_header_desc" : "A real clock as light! Adjsut the colors of hours, minute, seconds. A optional 3/6/9/12 o'clock marker is also available. In case the clock is wrong, you need to check your system clock.", 
+	"edt_eff_lightclock_header_desc" : "A real clock as light! Adjsut the colors of hours, minute, seconds. A optional 3/6/9/12 o'clock marker is also available. In case the clock is wrong, you need to check your system clock.",
 	"edt_eff_pacman_header" : "Pac-Man",
 	"edt_eff_moodblobs_header" : "Mood Blobs",
 	"edt_eff_swirl_header" : "Color Swirl",
