remove smoothing delay&pause for effects

--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -601,11 +601,9 @@
 	"edt_conf_log_heading_title" : "Logging",
 	"edt_conf_log_level_title" : "Log-Level",
 	"edt_conf_log_level_expl" : "Depending on loglevel you see less or more messages in your log.",
-	"edt_eff_smooth_custom_title" : "Enable smoothing",
-	"edt_eff_smooth_time_ms_title" : "Smoothing time",
-	"edt_eff_smooth_updateFrequency_title" : "Smoothing update frequency",
-	"edt_eff_smooth_updateDelay_title" : "Smoothing update delay",
-	"edt_eff_smooth_pause_title" : "Pause smoothing",
+	"edt_eff_smooth_custom" : "Enable smoothing",
+	"edt_eff_smooth_time_ms" : "Smoothing time",
+	"edt_eff_smooth_updateFrequency" : "Smoothing update frequency",
 	"edt_eff_candle_header" : "Candle",
 	"edt_eff_candle_header_desc" : "Shimmering candles",
 	"edt_eff_police_header" : "Police",
