--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -600,11 +600,9 @@
 	"edt_conf_log_heading_title" : "Protokoll",
 	"edt_conf_log_level_title" : "Protokollstufe",
 	"edt_conf_log_level_expl" : "Abhängig der Stufe sind weniger oder mehr Meldungen sichtbar.",
-	"edt_eff_smooth_custom_title" : "Aktivere Glättung",
-	"edt_eff_smooth_time_ms_title" : "Glättung: Zeit",
-	"edt_eff_smooth_updateFrequency_title" : "Glättung: Aktualisierungsfrequenz",
-	"edt_eff_smooth_updateDelay_title" : "Glättung: Aktualisierungsverzögerung",
-	"edt_eff_smooth_pause_title" : "Glättung pausieren",
+	"edt_eff_smooth_custom" : "Aktivere Glättung",
+	"edt_eff_smooth_time_ms" : "Glättung: Zeit",
+	"edt_eff_smooth_updateFrequency" : "Glättung: Aktualisierungsfrequenz",
 	"edt_eff_candle_header" : "Kerze",
 	"edt_eff_candle_header_desc" : "Flackerndes Kerzenlicht",
 	"edt_eff_police_header" : "Polizei",
