finalize disable effects ui

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -95,7 +95,7 @@
 	"conf_general_impexp_expbtn" : "Exportieren",
 	"conf_helptable_option" : "Option",
 	"conf_helptable_expl" : "Erklärung",
-	"conf_effect_path_intro" : "Definiere weitere Effekt-Pfade, wenn nötig.",
+	"conf_effect_path_intro" : "Hier kannst du Ordner angeben, die beim Laden von Effekten berücksichtig werden sollen. Zusätzlich können Effekte anhand ihres Namens deaktiviert werden um sie aus Listen zu löschen.",
 	"conf_effect_fgeff_intro" : "Definiere einen Start Effekt/Farbe, dieser wird angezeigt, wenn Hyperion startet für die angegebene Dauer.",
 	"conf_effect_bgeff_intro" : "Definiere einen Hintergrund Effekt/Farbe. Dieser wird aktiv, wenn Hyperion sich im Leerlauf befindet. Wird immer mit Priorität 255 gestartet.",
 	"conf_leds_device_intro" : "Wähle eine Methode zur Steuerung deiner LEDs aus, sie sind unterteilt in verschiedene Kategorien. Neben den allgemeinen Optionen die für alle gültig sind, gibt es auch spezfische die sich unterscheiden je nach Wahl.",
@@ -596,6 +596,7 @@
 	"edt_conf_effp_paths_expl" : "Es können mehrere Ordner definiert werden die Effekte enthalten. Der Effekt Konfigurator speichert immer im Ersten Ordner.",
 	"edt_conf_effp_paths_itemtitle" : "Pfad",
 	"edt_conf_effp_disable_title" : "Deaktivierte Effekte",
+	"edt_conf_effp_disable_expl" : "Trage hier die Namen der Effekte ein, die in Effektlisten nicht mehr zur Auswahl stehen sollen.",
 	"edt_conf_effp_disable_itemtitle" : "Effekt",
 	"edt_conf_log_heading_title" : "Protokoll",
 	"edt_conf_log_level_title" : "Protokollstufe",
