--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -95,7 +95,7 @@
 	"conf_general_impexp_expbtn" : "Export",
 	"conf_helptable_option" : "Option",
 	"conf_helptable_expl" : "Explanation",
-	"conf_effect_path_intro" : "Define more effect paths if necessary.",
+	"conf_effect_path_intro" : "Load effects from the defined paths. Additional you can disable single effects by name to hide them from all effect lists.",
 	"conf_effect_fgeff_intro" : "Define a booteffect or color, which is shown during Hyperion startup for the defined duration.",
 	"conf_effect_bgeff_intro" : "Define a background effect/color, which is shown during Hyperion \"idle\". Sarts always with priority channel 255.",
 	"conf_leds_device_intro" : "Hyperion supports a lot of controllers to transmit data to your target device. Select a LED controller out of the sorted list and configure it. We have chosen the best default settings for each device.",
@@ -596,7 +596,8 @@
 	"edt_conf_effp_paths_title" : "Effect Path(s)",
 	"edt_conf_effp_paths_expl" : "You could define more folders that contain effects. The effect configurator will always save inside the first folder.",
 	"edt_conf_effp_paths_itemtitle" : "Path",
-	"edt_conf_effp_disable_title" : "Disabed Effects",
+	"edt_conf_effp_disable_title" : "Disabled Effects",
+	"edt_conf_effp_disable_expl" : "Add effect names here to disable/hide them from all effect lists.",
 	"edt_conf_effp_disable_itemtitle" : "Effect",
 	"edt_conf_log_heading_title" : "Logging",
 	"edt_conf_log_level_title" : "Log-Level",
