remote page add 2D/3D videoMode

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -188,6 +188,11 @@
 	"remote_effects_label_effects" : "Effekt:",
 	"remote_adjustment_label" : "Farbanpassung",
 	"remote_adjustment_intro" : "Verändere live Farbe/Helligkeit/Kompensation. $1",
+	"remote_videoMode_label" : "Video Modus",
+	"remote_videoMode_intro" : "Wähle zwischen verschiedenen Video Modi um neben 2D auch 3D Filme zu genießen. Unterstützt werden alle Aufnahmearten. $1",
+	"remote_videoMode_3DSBS" : "3DSBS",
+	"remote_videoMode_3DTAB" : "3DTAB",
+	"remote_videoMode_2D" : "2D",
 	"remote_input_label" : "Quellenauswahl",
 	"remote_input_intro" : "Hyperion nutzt ein Prioritätensystem um die Quelle zu wählen. Alles was du setzt hat eine Priorität (Effekte/Farben/Plattform Aufnahme/USB Aufnahme und Netzwerkquellen). Standardmäßig nutzt Hyperion die Quelle mit der niedrigsten Priorität. Hier kannst du aktiv Einfluss darauf nehmen. $1",
 	"remote_input_label_autoselect" : "Automatische Auswahl",
