--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -188,6 +188,11 @@
 	"remote_effects_label_effects" : "Effect:",
 	"remote_adjustment_label" : "Color adjustment",
 	"remote_adjustment_intro" : "Modifiy color/brightness/compensation during runtime. $1",
+	"remote_videoMode_label" : "Video mode",
+	"remote_videoMode_intro" : "Switch between different video modes to enjoy 3D movies! Supported are all capture devices. $1",
+	"remote_videoMode_3DSBS" : "3DSBS",
+	"remote_videoMode_3DTAB" : "3DTAB",
+	"remote_videoMode_2D" : "2D",
 	"remote_input_label" : "Source Selection",
 	"remote_input_intro" : "Hyperion uses a priority system to select a source. Everything you set has a priority (Effect/Color/Platform capture/USB capture and network sources). By default, Hyperion select sources depending on priority (lowest number reflects the current active source). Now you have the opportunity to select sources on your own. $1",
 	"remote_input_label_autoselect" : "Auto Selection",
