add blackborder texts

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -541,10 +541,14 @@
 	"edt_conf_bb_heading_title" : "Schwarze Balken Erkennung",
 	"edt_conf_bb_threshold_title" : "Schwelle",
 	"edt_conf_bb_threshold_expl" : "Wenn die Erkennung nicht funktioniert, erhöhe die Schwelle um auf 'graues' schwarz zu reagieren.",
-	"edt_conf_bb_unknownFrameCnt_title" : "unknownFrameCnt",
-	"edt_conf_bb_borderFrameCnt_title" : "borderFrameCnt",
-	"edt_conf_bb_maxInconsistentCnt_title" : "maxInconsistentCn",
-	"edt_conf_bb_blurRemoveCnt_title" : "blurRemoveCnt",
+	"edt_conf_bb_unknownFrameCnt_title" : "Unbekannte Bilder",
+	"edt_conf_bb_unknownFrameCnt_expl" : "Anzahl an Bildern die negativ sind, welche den Rand auf 0 zurücksetzen.",
+	"edt_conf_bb_borderFrameCnt_title" : "Randbilder",
+	"edt_conf_bb_borderFrameCnt_expl" : "Anzahl an Bildern bis ein neuer Rand festgelegt wird.",
+	"edt_conf_bb_maxInconsistentCnt_title" : "Inkosistente Bilder",
+	"edt_conf_bb_maxInconsistentCnt_expl" : "Anzahl der zu ignorierenden Bilder bis ein neuer Rand überprüft wird.",
+	"edt_conf_bb_blurRemoveCnt_title" : "Unscharfe Pixel",
+	"edt_conf_bb_blurRemoveCnt_expl" : "Anzahl an Pixeln, die zusätzlich vom Rand abgeschnitten werden.",
 	"edt_conf_bb_mode_title" : "Modus",
 	"edt_conf_bb_mode_expl" : "Algorithmus zur Auswertung. (siehe Wiki)",
 	"edt_conf_kodic_heading_title" : "Kodi Überwachung",
