--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -542,10 +542,14 @@
 	"edt_conf_bb_heading_title" : "Blackbar detector",
 	"edt_conf_bb_threshold_title" : "Threshold",
 	"edt_conf_bb_threshold_expl" : "If the detection doesn't work, higher the threshold to adjust on 'greyish' black",
-	"edt_conf_bb_unknownFrameCnt_title" : "unknownFrameCnt",
-	"edt_conf_bb_borderFrameCnt_title" : "borderFrameCnt",
-	"edt_conf_bb_maxInconsistentCnt_title" : "maxInconsistentCn",
-	"edt_conf_bb_blurRemoveCnt_title" : "blurRemoveCnt",
+	"edt_conf_bb_unknownFrameCnt_title" : "Unknown frames",
+	"edt_conf_bb_unknownFrameCnt_expl" : "Number of frames without any detection before the border is set to 0.",
+	"edt_conf_bb_borderFrameCnt_title" : "Border frames",
+	"edt_conf_bb_borderFrameCnt_expl" : "Number of frames before a consistent detected border gets set.",
+	"edt_conf_bb_maxInconsistentCnt_title" : "Inconsistent frames",
+	"edt_conf_bb_maxInconsistentCnt_expl" : "Number of inconsistent frames that are ignored before a new border gets a chance to proof consistency.",
+	"edt_conf_bb_blurRemoveCnt_title" : "Blur pixel",
+	"edt_conf_bb_blurRemoveCnt_expl" : "Number of pixels that get removed from the detected border to cut away blur.",
 	"edt_conf_bb_mode_title" : "Mode",
 	"edt_conf_bb_mode_expl" : "Algorithm for processing. (see Wiki)",
 	"edt_conf_kodic_heading_title" : "Kodi Watch",
