--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -95,7 +95,7 @@
 	"conf_general_impexp_expbtn" : "Exportieren",
 	"conf_helptable_option" : "Option",
 	"conf_helptable_expl" : "Erklärung",
-	"conf_effect_path_intro" : "Definiere weitere Effekt-Pfade, wenn nötig.",
+	"conf_effect_path_intro" : "Hier kannst du Ordner angeben, die beim Laden von Effekten berücksichtig werden sollen. Zusätzlich können Effekte anhand ihres Namens deaktiviert werden um sie aus Listen zu löschen.",
 	"conf_effect_fgeff_intro" : "Definiere einen Start Effekt/Farbe, dieser wird angezeigt, wenn Hyperion startet für die angegebene Dauer.",
 	"conf_effect_bgeff_intro" : "Definiere einen Hintergrund Effekt/Farbe. Dieser wird aktiv, wenn Hyperion sich im Leerlauf befindet. Wird immer mit Priorität 255 gestartet.",
 	"conf_leds_device_intro" : "Wähle eine Methode zur Steuerung deiner LEDs aus, sie sind unterteilt in verschiedene Kategorien. Neben den allgemeinen Optionen die für alle gültig sind, gibt es auch spezfische die sich unterscheiden je nach Wahl.",
@@ -188,6 +188,11 @@
 	"remote_effects_label_effects" : "Effekt:",
 	"remote_adjustment_label" : "Farbanpassung",
 	"remote_adjustment_intro" : "Verändere live Farbe/Helligkeit/Kompensation. $1",
+	"remote_videoMode_label" : "Video Modus",
+	"remote_videoMode_intro" : "Wähle zwischen verschiedenen Video Modi um neben 2D auch 3D Filme zu genießen. Unterstützt werden alle Aufnahmearten. $1",
+	"remote_videoMode_3DSBS" : "3DSBS",
+	"remote_videoMode_3DTAB" : "3DTAB",
+	"remote_videoMode_2D" : "2D",
 	"remote_input_label" : "Quellenauswahl",
 	"remote_input_intro" : "Hyperion nutzt ein Prioritätensystem um die Quelle zu wählen. Alles was du setzt hat eine Priorität (Effekte/Farben/Plattform Aufnahme/USB Aufnahme und Netzwerkquellen). Standardmäßig nutzt Hyperion die Quelle mit der niedrigsten Priorität. Hier kannst du aktiv Einfluss darauf nehmen. $1",
 	"remote_input_label_autoselect" : "Automatische Auswahl",
@@ -283,7 +288,6 @@
 	"infoDialog_writeconf_error_text" : "Das speichern der Konfiguration ist fehlgeschlagen.",
 	"infoDialog_import_jsonerror_text" : "Die ausgewählte Konfigurations-Datei \"$1\" ist keine .json Datei oder ist beschädigt! Fehlermeldung: ($2)",
 	"infoDialog_import_hyperror_text" : "Die ausgewählte Konfigurations-Datei \"$1\" kann nicht importiert werden. Sie ist nicht kompatibel mit Hyperion 2.0 und höher!",
-	"infoDialog_import_reverror_text" : "Die Version deiner Konfigurations-Datei \"$1\" stimmt nicht mit deiner Hyperion Version überein (Datei: $2, Hyperion: $3). Du kannst nur übereinstimmende Versionen importieren!",
 	"infoDialog_import_comperror_text" : "Dein Browser unterstützt leider keinen Import. Bitte versuche es mit einem anderen Browser erneut.",
 	"infoDialog_import_confirm_title" : "Bestätige Import",
 	"infoDialog_import_confirm_text" : "Bist du sicher, dass du die Konfigurations-Datei \"$1\" importieren möchtest? Diese Aktion kann nicht rückgängig gemacht werden!",
@@ -490,8 +494,6 @@
 	"edt_conf_v4l2_frameDecimation_expl" : "Der Faktor der Bildverkleinerung",
 	"edt_conf_v4l2_sizeDecimation_title" : "Größenänderung",
 	"edt_conf_v4l2_sizeDecimation_expl" : "Der Faktor der Größenänderung",
-	"edt_conf_v4l2_mode_title" : "Modus",
-	"edt_conf_v4l2_mode_expl" : "Modus der USB Aufnahme",
 	"edt_conf_v4l2_useKodiChecker_title" : "Nutze Kodi Überwachung",
 	"edt_conf_v4l2_useKodiChecker_expl" : "Starte/Stoppe Aufnahme mithilfe der Kodi Überwachung.",
 	"edt_conf_v4l2_cropLeft_title" : "Entferne links",
@@ -539,10 +541,14 @@
 	"edt_conf_bb_heading_title" : "Schwarze Balken Erkennung",
 	"edt_conf_bb_threshold_title" : "Schwelle",
 	"edt_conf_bb_threshold_expl" : "Wenn die Erkennung nicht funktioniert, erhöhe die Schwelle um auf 'graues' schwarz zu reagieren.",
-	"edt_conf_bb_unknownFrameCnt_title" : "unknownFrameCnt",
-	"edt_conf_bb_borderFrameCnt_title" : "borderFrameCnt",
-	"edt_conf_bb_maxInconsistentCnt_title" : "maxInconsistentCn",
-	"edt_conf_bb_blurRemoveCnt_title" : "blurRemoveCnt",
+	"edt_conf_bb_unknownFrameCnt_title" : "Unbekannte Bilder",
+	"edt_conf_bb_unknownFrameCnt_expl" : "Anzahl an Bildern die negativ sind, welche den Rand auf 0 zurücksetzen.",
+	"edt_conf_bb_borderFrameCnt_title" : "Randbilder",
+	"edt_conf_bb_borderFrameCnt_expl" : "Anzahl an Bildern bis ein neuer Rand festgelegt wird.",
+	"edt_conf_bb_maxInconsistentCnt_title" : "Inkosistente Bilder",
+	"edt_conf_bb_maxInconsistentCnt_expl" : "Anzahl der zu ignorierenden Bilder bis ein neuer Rand überprüft wird.",
+	"edt_conf_bb_blurRemoveCnt_title" : "Unscharfe Pixel",
+	"edt_conf_bb_blurRemoveCnt_expl" : "Anzahl an Pixeln, die zusätzlich vom Rand abgeschnitten werden.",
 	"edt_conf_bb_mode_title" : "Modus",
 	"edt_conf_bb_mode_expl" : "Algorithmus zur Auswertung. (siehe Wiki)",
 	"edt_conf_kodic_heading_title" : "Kodi Überwachung",
@@ -599,15 +605,14 @@
 	"edt_conf_effp_paths_expl" : "Es können mehrere Ordner definiert werden die Effekte enthalten. Der Effekt Konfigurator speichert immer im Ersten Ordner.",
 	"edt_conf_effp_paths_itemtitle" : "Pfad",
 	"edt_conf_effp_disable_title" : "Deaktivierte Effekte",
+	"edt_conf_effp_disable_expl" : "Trage hier die Namen der Effekte ein, die in Effektlisten nicht mehr zur Auswahl stehen sollen.",
 	"edt_conf_effp_disable_itemtitle" : "Effekt",
 	"edt_conf_log_heading_title" : "Protokoll",
 	"edt_conf_log_level_title" : "Protokollstufe",
 	"edt_conf_log_level_expl" : "Abhängig der Stufe sind weniger oder mehr Meldungen sichtbar.",
-	"edt_eff_smooth_custom_title" : "Aktivere Glättung",
-	"edt_eff_smooth_time_ms_title" : "Glättung: Zeit",
-	"edt_eff_smooth_updateFrequency_title" : "Glättung: Aktualisierungsfrequenz",
-	"edt_eff_smooth_updateDelay_title" : "Glättung: Aktualisierungsverzögerung",
-	"edt_eff_smooth_pause_title" : "Glättung pausieren",
+	"edt_eff_smooth_custom" : "Aktivere Glättung",
+	"edt_eff_smooth_time_ms" : "Glättung: Zeit",
+	"edt_eff_smooth_updateFrequency" : "Glättung: Aktualisierungsfrequenz",
 	"edt_eff_candle_header" : "Kerze",
 	"edt_eff_candle_header_desc" : "Flackerndes Kerzenlicht",
 	"edt_eff_police_header" : "Polizei",
@@ -618,7 +623,7 @@
 	"edt_eff_knightrider_header" : "Knight Rider",
 	"edt_eff_knightrider_header_desc" : "K.I.T.T ist zurück! Der Front-Scanner des bekannten Autos, diesmal nicht nur in rot.",
 	"edt_eff_lightclock_header" : "Lichtuhr",
-	"edt_eff_lightclock_header_desc" : "Eine echte Uhr als Licht! Passe die Farben von Stunden, Minuten, Sekunden deinen Vorstellungen an. Optional können 3/6/9/12 Uhr Markierungen aktiviert werden. Sollte die Uhr eine falsche Zeit anzeigen, überprüfe die Uhrzeit deines Systems.", 
+	"edt_eff_lightclock_header_desc" : "Eine echte Uhr als Licht! Passe die Farben von Stunden, Minuten, Sekunden deinen Vorstellungen an. Optional können 3/6/9/12 Uhr Markierungen aktiviert werden. Sollte die Uhr eine falsche Zeit anzeigen, überprüfe die Uhrzeit deines Systems.",
 	"edt_eff_pacman_header" : "Pac-Man",
 	"edt_eff_moodblobs_header" : "Stimmungskugeln",
 	"edt_eff_swirl_header" : "Farbwirbel",
