--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -95,7 +95,7 @@
 	"conf_general_impexp_expbtn" : "Export",
 	"conf_helptable_option" : "Option",
 	"conf_helptable_expl" : "Explanation",
-	"conf_effect_path_intro" : "Define more effect paths if necessary.",
+	"conf_effect_path_intro" : "Load effects from the defined paths. Additional you can disable single effects by name to hide them from all effect lists.",
 	"conf_effect_fgeff_intro" : "Define a booteffect or color, which is shown during Hyperion startup for the defined duration.",
 	"conf_effect_bgeff_intro" : "Define a background effect/color, which is shown during Hyperion \"idle\". Sarts always with priority channel 255.",
 	"conf_leds_device_intro" : "Hyperion supports a lot of controllers to transmit data to your target device. Select a LED controller out of the sorted list and configure it. We have chosen the best default settings for each device.",
@@ -188,6 +188,11 @@
 	"remote_effects_label_effects" : "Effect:",
 	"remote_adjustment_label" : "Color adjustment",
 	"remote_adjustment_intro" : "Modifiy color/brightness/compensation during runtime. $1",
+	"remote_videoMode_label" : "Video mode",
+	"remote_videoMode_intro" : "Switch between different video modes to enjoy 3D movies! Supported are all capture devices. $1",
+	"remote_videoMode_3DSBS" : "3DSBS",
+	"remote_videoMode_3DTAB" : "3DTAB",
+	"remote_videoMode_2D" : "2D",
 	"remote_input_label" : "Source Selection",
 	"remote_input_intro" : "Hyperion uses a priority system to select a source. Everything you set has a priority (Effect/Color/Platform capture/USB capture and network sources). By default, Hyperion select sources depending on priority (lowest number reflects the current active source). Now you have the opportunity to select sources on your own. $1",
 	"remote_input_label_autoselect" : "Auto Selection",
@@ -283,7 +288,6 @@
 	"infoDialog_writeconf_error_text" : "Saving your configuration failed.",
 	"infoDialog_import_jsonerror_text" : "The selected configuration file \"$1\" is no .json file or it's corrupted. Error message: ($2)",
 	"infoDialog_import_hyperror_text" : "The selected configuration file \"$1\" can't be imported. It's not compatible with Hyperion 2.0 and higher!",
-	"infoDialog_import_reverror_text" : "The revision of your configuration file \"$1\" doesnt match the current Hyperion version you run (File: $2, Hyperion: $3). You could just import matching configurations!",
 	"infoDialog_import_comperror_text" : "Sad! Your browser doesn't support a import. Please try again with another browser.",
 	"infoDialog_import_confirm_title" : "Confirm import",
 	"infoDialog_import_confirm_text" : "Are you sure to import \"$1\"? This process can't be reverted!",
@@ -491,8 +495,6 @@
 	"edt_conf_v4l2_frameDecimation_expl" : "The factor of frame decimation",
 	"edt_conf_v4l2_sizeDecimation_title" : "Size decimation",
 	"edt_conf_v4l2_sizeDecimation_expl" : "The factor of size decimation",
-	"edt_conf_v4l2_mode_title" : "Mode",
-	"edt_conf_v4l2_mode_expl" : "Modus of USB capture",
 	"edt_conf_v4l2_useKodiChecker_title" : "Use Kodi Watch",
 	"edt_conf_v4l2_useKodiChecker_expl" : "Start/stop capturing with Kodi Watch results.",
 	"edt_conf_v4l2_cropLeft_title" : "Crop left",
@@ -540,10 +542,14 @@
 	"edt_conf_bb_heading_title" : "Blackbar detector",
 	"edt_conf_bb_threshold_title" : "Threshold",
 	"edt_conf_bb_threshold_expl" : "If the detection doesn't work, higher the threshold to adjust on 'greyish' black",
-	"edt_conf_bb_unknownFrameCnt_title" : "unknownFrameCnt",
-	"edt_conf_bb_borderFrameCnt_title" : "borderFrameCnt",
-	"edt_conf_bb_maxInconsistentCnt_title" : "maxInconsistentCn",
-	"edt_conf_bb_blurRemoveCnt_title" : "blurRemoveCnt",
+	"edt_conf_bb_unknownFrameCnt_title" : "Unknown frames",
+	"edt_conf_bb_unknownFrameCnt_expl" : "Number of frames without any detection before the border is set to 0.",
+	"edt_conf_bb_borderFrameCnt_title" : "Border frames",
+	"edt_conf_bb_borderFrameCnt_expl" : "Number of frames before a consistent detected border gets set.",
+	"edt_conf_bb_maxInconsistentCnt_title" : "Inconsistent frames",
+	"edt_conf_bb_maxInconsistentCnt_expl" : "Number of inconsistent frames that are ignored before a new border gets a chance to proof consistency.",
+	"edt_conf_bb_blurRemoveCnt_title" : "Blur pixel",
+	"edt_conf_bb_blurRemoveCnt_expl" : "Number of pixels that get removed from the detected border to cut away blur.",
 	"edt_conf_bb_mode_title" : "Mode",
 	"edt_conf_bb_mode_expl" : "Algorithm for processing. (see Wiki)",
 	"edt_conf_kodic_heading_title" : "Kodi Watch",
@@ -599,16 +605,15 @@
 	"edt_conf_effp_paths_title" : "Effect Path(s)",
 	"edt_conf_effp_paths_expl" : "You could define more folders that contain effects. The effect configurator will always save inside the first folder.",
 	"edt_conf_effp_paths_itemtitle" : "Path",
-	"edt_conf_effp_disable_title" : "Disabed Effects",
+	"edt_conf_effp_disable_title" : "Disabled Effects",
+	"edt_conf_effp_disable_expl" : "Add effect names here to disable/hide them from all effect lists.",
 	"edt_conf_effp_disable_itemtitle" : "Effect",
 	"edt_conf_log_heading_title" : "Logging",
 	"edt_conf_log_level_title" : "Log-Level",
 	"edt_conf_log_level_expl" : "Depending on loglevel you see less or more messages in your log.",
-	"edt_eff_smooth_custom_title" : "Enable smoothing",
-	"edt_eff_smooth_time_ms_title" : "Smoothing time",
-	"edt_eff_smooth_updateFrequency_title" : "Smoothing update frequency",
-	"edt_eff_smooth_updateDelay_title" : "Smoothing update delay",
-	"edt_eff_smooth_pause_title" : "Pause smoothing",
+	"edt_eff_smooth_custom" : "Enable smoothing",
+	"edt_eff_smooth_time_ms" : "Smoothing time",
+	"edt_eff_smooth_updateFrequency" : "Smoothing update frequency",
 	"edt_eff_candle_header" : "Candle",
 	"edt_eff_candle_header_desc" : "Shimmering candles",
 	"edt_eff_police_header" : "Police",
@@ -620,7 +625,7 @@
 	"edt_eff_knightrider_header" : "Knight Rider",
 	"edt_eff_knightrider_header_desc" : "K.I.T.T is back! The front-scanner of the well known car, this time not just in red.",
 	"edt_eff_lightclock_header" : "Light Clock",
-	"edt_eff_lightclock_header_desc" : "A real clock as light! Adjsut the colors of hours, minute, seconds. A optional 3/6/9/12 o'clock marker is also available. In case the clock is wrong, you need to check your system clock.", 
+	"edt_eff_lightclock_header_desc" : "A real clock as light! Adjsut the colors of hours, minute, seconds. A optional 3/6/9/12 o'clock marker is also available. In case the clock is wrong, you need to check your system clock.",
 	"edt_eff_pacman_header" : "Pac-Man",
 	"edt_eff_moodblobs_header" : "Mood Blobs",
 	"edt_eff_swirl_header" : "Color Swirl",
