--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -10,6 +10,7 @@
 	"general_speech_de" : "Deutsch",
 	"general_speech_en" : "Englisch",
 	"general_speech_es" : "Spanisch",
+	"general_speech_it" : "Italienisch",
 	"general_access_default" : "Standard",
 	"general_access_advanced" : "Fortgeschritten",
 	"general_access_expert" : "Experte",
