--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -415,6 +415,7 @@
 	"edt_conf_enum_PAL" : "PAL",
 	"edt_conf_enum_NTSC" : "NTSC",
 	"edt_conf_enum_SECAM" : "SECAM",
+	"edt_conf_enum_NOCHANGE" : "NO-CHANGE",
 	"edt_conf_enum_logsilent" : "Stille",
 	"edt_conf_enum_logwarn" : "Warnung",
 	"edt_conf_enum_logverbose" : "Ausführlich",
