--- a/assets/webconfig/i18n/es.json
+++ b/assets/webconfig/i18n/es.json
@@ -364,6 +364,8 @@
     "edt_conf_enum_linear": "Lineal",
     "edt_conf_enum_PAL": "PAL",
     "edt_conf_enum_NTSC": "NTSC",
+    "edt_conf_enum_SECAM": "SECAM",
+    "edt_conf_enum_NOCHANGE" : "NO-CHANGE",
     "edt_conf_enum_logsilent": "Silencio",
     "edt_conf_enum_logwarn": "Advertencia",
     "edt_conf_enum_logverbose": "Detallado",
@@ -750,7 +752,6 @@
     "edt_eff_smooth_custom": "Habilitar suavizado",
     "edt_eff_smooth_time_ms": "Tiempo de suavizado",
     "edt_eff_smooth_updateFrequency": "Frecuencia de actualización de suavizado",
-    "edt_conf_enum_SECAM": "SECAM",
     "general_speech_it": "Italiano",
     "general_speech_cs": "Czech"
 }
