Added missing "API Key" String
from aurora

--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -57,7 +57,7 @@
 	"dashboard_componentbox_label_comp" : "Component",
 	"dashboard_componentbox_label_status" : "Status",
 	"dashboard_newsbox_label_title" : "Hyperion-Blog",
-    "dashboard_newsbox_visitblog" : "Visit Hyperion-Blog",
+    	"dashboard_newsbox_visitblog" : "Visit Hyperion-Blog",
 	"dashboard_newsbox_noconn" : "Can't connect to Hyperion Server to retrieve latest posts, does your internet connection work?",
 	"dashboard_newsbox_readmore" : "Read more",
 	"dashboard_alert_message_confedit_t" : "Configuration modified",
@@ -341,6 +341,7 @@
 	"wiz_cc_morethanone" : "You have more than one profile, please choose the profile you want to calibrate.",
 	"wiz_cc_btn_stop" : "Stop video",
 	"wiz_cc_summary" : "A conclusion of your settings. During video playback, you could change or test values again. If you are done, click on save.",
+	"edt_dev_auth_key_title" : "Aurora API Key",
 	"edt_dev_enum_subtract_minimum" : "Substract minimum",
 	"edt_dev_enum_sub_min_warm_adjust" : "Min warm adjust",
 	"edt_dev_enum_white_off" : "White off",
