Update translation file

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -341,6 +341,7 @@
 	"wiz_cc_morethanone" : "Du hast mehr als 1 Profil, bitte wähle das zu kalibrierende Profil",
 	"wiz_cc_btn_stop" : "Stoppe Video",
 	"wiz_cc_summary" : "Im folgenden eine Zusammenfassung deiner Einstellungen. Während du ein Video abspielst, kannst du hier weiter ausprobieren. Wenn du fertig bist, klicke auf speichern.",
+	"edt_dev_auth_key_title" : "Aurora API Schlüssel",
 	"edt_dev_enum_subtract_minimum" : "Subtrahiere minimum",
 	"edt_dev_enum_sub_min_warm_adjust" : "Minimale Anpassung: warm",
 	"edt_dev_enum_white_off" : "Weiß ist aus",
@@ -502,7 +503,7 @@
 	"edt_conf_v4l2_cropBottom_title" : "Entferne unten",
 	"edt_conf_v4l2_cropBottom_expl" : "Anzahl der Pixel auf der unteren Seite die vom Bild entfernt werden.",
 	"edt_conf_v4l2_signalDetection_title" : "Signal Erkennung",
-	"edt_conf_v4l2_signalDetection_expl" : "Wenn aktiviert, wird die USB Aufnahme temporär bei \"kein Signal\" abgeschalten.",
+	"edt_conf_v4l2_signalDetection_expl" : "Wenn aktiviert, wird die USB Aufnahme temporär bei \"kein Signal\" abgeschalten. Das Bild muss dazu 4 Sekunden lang unter die Schwellwerte fallen.",
 	"edt_conf_v4l2_redSignalThreshold_title" : "Rote Signalschwelle",
 	"edt_conf_v4l2_redSignalThreshold_expl" : "Je höher die rote Schwelle je eher wird abgeschalten bei entsprechendem rot-Anteil.",
 	"edt_conf_v4l2_greenSignalThreshold_title" : "Grüne Signalschwelle",
@@ -593,9 +594,14 @@
 	"edt_eff_smooth_updateFrequency" : "Glättung: Aktualisierungsfrequenz",
 	"edt_eff_candle_header" : "Kerze",
 	"edt_eff_candle_header_desc" : "Flackerndes Kerzenlicht",
+	"edt_eff_waves_header" : "Wellen",
+	"edt_eff_waves_header_desc" : "Gestalte Wellen aus Farbe! Mische dazu deine lieblings Farben und wähle einen Mittelpunkt.",
+	"edt_eff_gif_header" : "GIF's",
+	"edt_eff_gif_header_desc" : "Dieser Effekt spielt .gif Dateien ab. Bietet die Möglichkeit kleine GIF-Videos abzuspielen.",
 	"edt_eff_police_header" : "Polizei",
 	"edt_eff_police_header_desc" : "Lights like a police car in action",
 	"edt_eff_fade_header" : "Farbübergang",
+	"edt_eff_fade_header_desc" : "Farbübergange für alle LED's",
 	"edt_eff_rainbowmood_header" : "Regenbogen",
 	"edt_eff_rainbowmood_header_desc" : "Alle LEDs Regenbogen Farbübergang",
 	"edt_eff_knightrider_header" : "Knight Rider",
@@ -603,18 +609,24 @@
 	"edt_eff_lightclock_header" : "Lichtuhr",
 	"edt_eff_lightclock_header_desc" : "Eine echte Uhr als Licht! Passe die Farben von Stunden, Minuten, Sekunden deinen Vorstellungen an. Optional können 3/6/9/12 Uhr Markierungen aktiviert werden. Sollte die Uhr eine falsche Zeit anzeigen, überprüfe die Uhrzeit deines Systems.",
 	"edt_eff_pacman_header" : "Pac-Man",
+	"edt_eff_pacman_header_desc" : "Klein gefräßig und gelb, wer wird überleben?",
 	"edt_eff_moodblobs_header" : "Stimmungskugeln",
+	"edt_eff_moodblobs_header_desc" : "Entspannt den Abend beginnen mit langsam bewegenden Farbkugeln die ebenso sanft ihre Farbe verändern.",
 	"edt_eff_swirl_header" : "Farbwirbel",
 	"edt_eff_swirl_header_desc" : "Ein Wirbel mit frei wählbaren Farben. Die Farben werden gleichmäßig auf 360° aufgeteilt, dazwischen werden Farbübergänge berechnet. Zusätzlich kann ein zweiter Wirbel über den Ersten gelegt werden (Transparenz beachten!). Tipp: Eine Widerholung der selben Farbe erhöht deren \"größe\" und verringert den Bereich des Farbübergangs zu benachbarten Farben.",
 	"edt_eff_random_header" : "Zufällig",
-	"edt_eff_runningdots_header" : "Rennende Punkte",
+	"edt_eff_random_header_desc" : "Pixel-Farb-Mix",
 	"edt_eff_systemshutdown_header" : "Herunterfahren",
+	"edt_eff_systemshutdown_header_desc" : "Eine kurze Animation gefolgt von einem möglicherweise echten Herunterfahren des Systems",
 	"edt_eff_snake_header" : "Schlange",
+	"edt_eff_snake_header_desc" : "Wo ist das Futter?",
 	"edt_eff_sparks_header" : "Funken",
 	"edt_eff_sparks_header_desc" : "Ein Sternenfunkeln, wahlweise in festgelegter Farbe oder zufällig. Passe Helligkeit, Sättigung und Geschwindigkeit an.",
 	"edt_eff_traces_header" : "Farbspuren",
 	"edt_eff_x-mas_header" : "Weihnachten",
-	"edt_eff_trails_header" : "Spuren",
+	"edt_eff_x-mas_header_desc" : "Ein Hauch von Weihnachten",
+	"edt_eff_trails_header" : "Sternschnuppen",
+	"edt_eff_trails_header_desc" : "In verschiedenen Farben, wünsch dir was!",
 	"edt_eff_flag_header" : "Flaggen",
 	"edt_eff_flag_header_desc" : "Verpasse deinen LEDs die Farben deines Landes. Du kannst mehr als eine Flagge auswählen, je nach Intervall werden diese dann abwechselnd angezeigt.",
 	"edt_eff_enum_all" : "Alle",
@@ -679,6 +691,7 @@
 	"edt_eff_customColor" : "Benutzerdefinierte Farbe",
 	"edt_eff_randomCenter" : "Zufälliger Mittelpunkt",
 	"edt_eff_enableSecondSwirl":"Zweiter Wirbel",
+	"edt_eff_reverseRandomTime":"Richtungswechsel alle",
 	"edt_append_ns" : "ns",
 	"edt_append_ms" : "ms",
 	"edt_append_s" : "s",
