Update translation file

--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -341,6 +341,7 @@
 	"wiz_cc_morethanone" : "You have more than one profile, please choose the profile you want to calibrate.",
 	"wiz_cc_btn_stop" : "Stop video",
 	"wiz_cc_summary" : "A conclusion of your settings. During video playback, you could change or test values again. If you are done, click on save.",
+	"edt_dev_auth_key_title" : "Aurora API Key",
 	"edt_dev_enum_subtract_minimum" : "Substract minimum",
 	"edt_dev_enum_sub_min_warm_adjust" : "Min warm adjust",
 	"edt_dev_enum_white_off" : "White off",
@@ -493,7 +494,7 @@
 	"edt_conf_v4l2_frameDecimation_title" : "Frame decimation",
 	"edt_conf_v4l2_frameDecimation_expl" : "The factor of frame decimation",
 	"edt_conf_v4l2_sizeDecimation_title" : "Size decimation",
-	"edt_conf_v4l2_sizeDecimation_expl" : "The factor of size decimation",
+	"edt_conf_v4l2_sizeDecimation_expl" : "The factor of size decimation. 1 means no decimation (keep original size)",
 	"edt_conf_v4l2_cropLeft_title" : "Crop left",
 	"edt_conf_v4l2_cropLeft_expl" : "Count of pixels on the left side that are removed from the picture.",
 	"edt_conf_v4l2_cropRight_title" : "Crop right",
@@ -503,7 +504,7 @@
 	"edt_conf_v4l2_cropBottom_title" : "Crop bottom",
 	"edt_conf_v4l2_cropBottom_expl" : "Count of pixels on the bottom side that are removed from the picture.",
 	"edt_conf_v4l2_signalDetection_title" : "Signal detection",
-	"edt_conf_v4l2_signalDetection_expl" : "If enabled, usb capture will be temporarily disabled when no signal was found.",
+	"edt_conf_v4l2_signalDetection_expl" : "If enabled, usb capture will be temporarily disabled when no signal was found. This will happen when the picture fall below the threshold value for a period of 4 seconds.",
 	"edt_conf_v4l2_redSignalThreshold_title" : "Red signal threshold",
 	"edt_conf_v4l2_redSignalThreshold_expl" : "Darkens low red values (recognized as black)",
 	"edt_conf_v4l2_greenSignalThreshold_title" : "Green signal threshold",
@@ -592,6 +593,10 @@
 	"edt_eff_smooth_custom" : "Enable smoothing",
 	"edt_eff_smooth_time_ms" : "Smoothing time",
 	"edt_eff_smooth_updateFrequency" : "Smoothing update frequency",
+	"edt_eff_waves_header" : "Waves",
+	"edt_eff_waves_header_desc" : "Waves of color! Choose your colors, rotation time, direction reverse and more.",
+	"edt_eff_gif_header" : "GIF's",
+	"edt_eff_gif_header_desc" : "This effect plays .gif files, provide a simple video like loop as effect.",
 	"edt_eff_candle_header" : "Candle",
 	"edt_eff_candle_header_desc" : "Shimmering candles",
 	"edt_eff_police_header" : "Police",
@@ -605,20 +610,27 @@
 	"edt_eff_lightclock_header" : "Light Clock",
 	"edt_eff_lightclock_header_desc" : "A real clock as light! Adjsut the colors of hours, minute, seconds. A optional 3/6/9/12 o'clock marker is also available. In case the clock is wrong, you need to check your system clock.",
 	"edt_eff_pacman_header" : "Pac-Man",
+	"edt_eff_pacman_header_desc" : "Small hungry and yellow. Who will survive?",
 	"edt_eff_moodblobs_header" : "Mood Blobs",
+	"edt_eff_moodblobs_header_desc" : "Relax at the evening with slow moving and color changing blobs.",
 	"edt_eff_swirl_header" : "Color Swirl",
 	"edt_eff_swirl_header_desc" : "A swirl with custom colors. Colors are even spread to 360°, in between colors shifts will be calcualted. Additional you can add a second swirl on top, be aware that you need partly transparency! Hint: A reapeat of the same color results in a \"hugher\" color area and a reduced color shift area.",
 	"edt_eff_random_header" : "Random",
-	"edt_eff_runningdots_header" : "Running Dots",
+	"edt_eff_random_header_desc" : "Pixel Dot, dot, dot...",
 	"edt_eff_systemshutdown_header" : "System Shutdown",
+	"edt_eff_systemshutdown_header_desc" : "A short animation with probably a real system shutdown",
 	"edt_eff_snake_header" : "Snake",
+	"edt_eff_snake_header_desc" : "Where is something to eat?",
 	"edt_eff_sparks_header" : "Sparks",
 	"edt_eff_sparks_header_desc" : "Star-Sparking, choose between a static color or random. You could also adjust brightness, staturation and speed.",
 	"edt_eff_traces_header" : "Color Traces",
+	"edt_eff_traces_header_desc" : "Requires redesign",
 	"edt_eff_x-mas_header" : "X-Mas",
-	"edt_eff_trails_header" : "Trails",
+	"edt_eff_x-mas_header_desc" : "Touch of christmas",
+	"edt_eff_trails_header" : "Falling stars",
+	"edt_eff_trails_header_desc" : "Colored stars that fall from top to bottom",
 	"edt_eff_flag_header" : "Flags",
-	"edt_eff_flag_header_desc" : "Let your leds shine bright in the colors of your country. You could select more then one flag, they will change based on interval time.",
+	"edt_eff_flag_header_desc" : "Let your leds shine bright in the colors of your country. You could select more than one flag, they will change based on interval time.",
 	"edt_eff_enum_all" : "All",
 	"edt_eff_enum_all-together" : "All together",
 	"edt_eff_enum_list" : "LED List",
@@ -630,6 +642,8 @@
 	"edt_eff_colorcount" : "Color length",
 	"edt_eff_rotationtime" : "Rotation time",
 	"edt_eff_sleeptime" : "Sleep time",
+	"edt_eff_image" : "Image file",
+	"edt_eff_fps" : "Frames per seconds",
 	"edt_eff_reversedirection" : "Reverse direction",
 	"edt_eff_fadeintime" : "Fade in time",
 	"edt_eff_fadeouttime" : "Fade out time",
@@ -681,6 +695,7 @@
 	"edt_eff_customColor" : "Custom Color",
 	"edt_eff_randomCenter" : "Random Center",
 	"edt_eff_enableSecondSwirl":"Second Swirl",
+	"edt_eff_reverseRandomTime":"Reverse every",
 	"edt_append_ns" : "ns",
 	"edt_append_ms" : "ms",
 	"edt_append_s" : "s",
