even more changes
Signed-off-by: Paulchen-Panther <Paulchen--Panter@gmx.net>

--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -27,6 +27,7 @@
 	"general_col_green" : "green",
 	"general_col_blue" : "blue",
 	"general_button_savesettings" : "Save settings",
+	"general_btn_yes" : "Yes",
 	"general_btn_ok" : "OK",
 	"general_btn_cancel" : "Cancel",
 	"general_btn_continue" : "Continue",
@@ -347,7 +348,7 @@
 	"edt_dev_enum_white_off" : "White off",
 	"edt_dev_general_heading_title" : "General Settings",
 	"edt_dev_general_name_title" : "Configuration name",
-	"edt_dev_general_ledCount_title" : "Count of all hardware LEDs",
+	"edt_dev_general_hardwareLedCount_title" : "Hardware LED count",
 	"edt_dev_general_colorOrder_title" : "RGB byte order",
 	"edt_dev_general_rewriteTime_title" : "Refresh time",
 	"edt_dev_spec_header_title" : "Specific Settings",
@@ -483,17 +484,9 @@
 	"edt_conf_smooth_continuousOutput_expl" : "Update the leds even there is no changed picture.",
 	"edt_conf_v4l2_heading_title" : "USB Capture",
 	"edt_conf_v4l2_device_title" : "Device",
-	"edt_conf_v4l2_device_expl" : "The path to the usb capture.",
-	"edt_conf_v4l2_input_title" : "Input",
-	"edt_conf_v4l2_input_expl" : "Input of this path.",
+	"edt_conf_v4l2_device_expl" : "The path to the usb capture interface. Set to 'auto' for auto detection. Example: '/dev/video0'",
 	"edt_conf_v4l2_standard_title" : "Video standard",
-	"edt_conf_v4l2_standard_expl" : "Select the video standard for your region.",
-	"edt_conf_v4l2_width_title" : "Width",
-	"edt_conf_v4l2_width_expl" : "The width of the picture. (-1 = auto width)",
-	"edt_conf_v4l2_height_title" : "Height",
-	"edt_conf_v4l2_height_expl" : "The height of the picture. (-1 = auto height)",
-	"edt_conf_v4l2_frameDecimation_title" : "Frame decimation",
-	"edt_conf_v4l2_frameDecimation_expl" : "The factor of frame decimation",
+	"edt_conf_v4l2_standard_expl" : "Select the video standard for your region. 'Auto' keeps the chosen one from v4l interface",
 	"edt_conf_v4l2_sizeDecimation_title" : "Size decimation",
 	"edt_conf_v4l2_sizeDecimation_expl" : "The factor of size decimation. 1 means no decimation (keep original size)",
 	"edt_conf_v4l2_cropLeft_title" : "Crop left",
@@ -505,7 +498,7 @@
 	"edt_conf_v4l2_cropBottom_title" : "Crop bottom",
 	"edt_conf_v4l2_cropBottom_expl" : "Count of pixels on the bottom side that are removed from the picture.",
 	"edt_conf_v4l2_signalDetection_title" : "Signal detection",
-	"edt_conf_v4l2_signalDetection_expl" : "If enabled, usb capture will be temporarily disabled when no signal was found.",
+	"edt_conf_v4l2_signalDetection_expl" : "If enabled, usb capture will be temporarily disabled when no signal was found. This will happen when the picture fall below the threshold value for a period of 4 seconds.",
 	"edt_conf_v4l2_redSignalThreshold_title" : "Red signal threshold",
 	"edt_conf_v4l2_redSignalThreshold_expl" : "Darkens low red values (recognized as black)",
 	"edt_conf_v4l2_greenSignalThreshold_title" : "Green signal threshold",
@@ -520,6 +513,11 @@
 	"edt_conf_v4l2_sDVOffsetMax_expl" : "Signal detection area vertical maximum (0.0-1.0)",
 	"edt_conf_v4l2_sDHOffsetMax_title" : "Signal Detection HMax",
 	"edt_conf_v4l2_sDHOffsetMax_expl" : "Signal detection area horizontal maximum (0.0-1.0)",
+	"edt_conf_instCapture_heading_title" : "Instance Capture",
+	"edt_conf_instC_systemEnable_title" : "Enable platform capture",
+	"edt_conf_instC_systemEnable_expl" : "Enables the platform capture for this led hardware instance",
+	"edt_conf_instC_v4lEnable_title" : "Enable USB capture",
+	"edt_conf_instC_v4lEnable_expl" : "Enables the USB capture for this led hardware instance",
 	"edt_conf_fg_heading_title" : "Platform Capture",
 	"edt_conf_fg_type_title" : "Type",
 	"edt_conf_fg_type_expl" : "Type of platform capture, default is 'auto'",
