--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -27,6 +27,7 @@
 	"general_col_green" : "grün",
 	"general_col_blue" : "blau",
 	"general_button_savesettings" : "Einstellungen speichern",
+	"general_btn_yes" : "Ja",
 	"general_btn_ok" : "OK",
 	"general_btn_cancel" : "Abbrechen",
 	"general_btn_continue" : "Fortfahren",
@@ -346,7 +347,7 @@
 	"edt_dev_enum_sub_min_warm_adjust" : "Minimale Anpassung: warm",
 	"edt_dev_enum_white_off" : "Weiß ist aus",
 	"edt_dev_general_heading_title" : "Allgemeine Einstellungen",
-	"edt_dev_general_ledCount_title" : "Anzahl Hardware LEDs",
+	"edt_dev_general_hardwareLedCount_title" : "Anzahl Hardware LEDs",
 	"edt_dev_general_colorOrder_title" : "RGB Byte Reihenfolge",
 	"edt_dev_general_rewriteTime_title" : "Aktualisierungszeit",
 	"edt_dev_spec_header_title" : "Spezifische Einstellungen",
@@ -482,13 +483,11 @@
 	"edt_conf_smooth_continuousOutput_expl" : "Aktualisiere die LEDs, auch wenn das Bild sich nicht geändert hat.",
 	"edt_conf_v4l2_heading_title" : "USB Aufnahme",
 	"edt_conf_v4l2_device_title" : "Gerät",
-	"edt_conf_v4l2_device_expl" : "Der Pfad zum USB Aufnahmegerät.",
-	"edt_conf_v4l2_input_title" : "Eingang",
-	"edt_conf_v4l2_input_expl" : "Der Eingang des Pfades.",
+	"edt_conf_v4l2_device_expl" : "Der Pfad zum USB (v4l) Aufnahmegerät. Wähle 'auto' für automatische Erkennung. Beispiel: '/dev/video0'",
 	"edt_conf_v4l2_standard_title" : "Videoformat",
-	"edt_conf_v4l2_standard_expl" : "Wähle das passende Videoformat deiner Region.",
+	"edt_conf_v4l2_standard_expl" : "Wähle das passende Videoformat deiner Region. Auf 'Auto' wird der gewählte Modus vom v4l interface beibehalten.",
 	"edt_conf_v4l2_sizeDecimation_title" : "Bildverkleinerung Faktor",
-	"edt_conf_v4l2_sizeDecimation_expl" : "Der Faktor der Bildverkleinerung ausgehend der von der ursprünglichen Größe, 1 bedeutet keine Änderung (originales Bild).",
+	"edt_conf_v4l2_sizeDecimation_expl" : "Der Faktor der Bildverkleinerung ausgehend von der ursprünglichen Größe, 1 bedeutet keine Änderung (originales Bild).",
 	"edt_conf_v4l2_cropLeft_title" : "Entferne links",
 	"edt_conf_v4l2_cropLeft_expl" : "Anzahl der Pixel auf der linken Seite die vom Bild entfernt werden.",
 	"edt_conf_v4l2_cropRight_title" : "Entferne rechts",
@@ -498,7 +497,7 @@
 	"edt_conf_v4l2_cropBottom_title" : "Entferne unten",
 	"edt_conf_v4l2_cropBottom_expl" : "Anzahl der Pixel auf der unteren Seite die vom Bild entfernt werden.",
 	"edt_conf_v4l2_signalDetection_title" : "Signal Erkennung",
-	"edt_conf_v4l2_signalDetection_expl" : "Wenn aktiviert, wird die USB Aufnahme temporär bei \"kein Signal\" abgeschalten.",
+	"edt_conf_v4l2_signalDetection_expl" : "Wenn aktiviert, wird die USB Aufnahme temporär bei \"kein Signal\" abgeschalten. Das Bild muss dazu 4 Sekunden lang unter die Schwellwerte fallen.",
 	"edt_conf_v4l2_redSignalThreshold_title" : "Rote Signalschwelle",
 	"edt_conf_v4l2_redSignalThreshold_expl" : "Je höher die rote Schwelle je eher wird abgeschalten bei entsprechendem rot-Anteil.",
 	"edt_conf_v4l2_greenSignalThreshold_title" : "Grüne Signalschwelle",
@@ -513,6 +512,11 @@
 	"edt_conf_v4l2_sDVOffsetMax_expl" : "Signal Erkennungs-Bereich vertikal maximum (0.0-1.0)",
 	"edt_conf_v4l2_sDHOffsetMax_title" : "Signal Erkennung HMax",
 	"edt_conf_v4l2_sDHOffsetMax_expl" : "Signal Erkennungs-Bereich horizontal maximum (0.0-1.0)",
+	"edt_conf_instCapture_heading_title" : "Instance Aufnahme",
+	"edt_conf_instC_systemEnable_title" : "Aktiviere Plattform Aufnahme",
+	"edt_conf_instC_systemEnable_expl" : "Aktiviert die Plattform Aufnahme für diese LED Hardware Instanz",
+	"edt_conf_instC_v4lEnable_title" : "Aktiviere USB Aufnahme",
+	"edt_conf_instC_v4lEnable_expl" : "Aktiviert die USB Aufnahme für diese LED Hardware Instanz",
 	"edt_conf_fg_heading_title" : "Plattform Aufnahme",
 	"edt_conf_fg_type_title" : "Typ",
 	"edt_conf_fg_type_expl" : "Art der Plattform Aufnahme, standard ist 'auto'",
