--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -47,7 +47,7 @@
 	"dashboard_infobox_label_latesthyp" : "Aktuellste Hyperion Version:",
 	"dashboard_infobox_label_platform" : "Plattform:",
 	"dashboard_infobox_label_instance" : "Instanz:",
-	"dashboard_infobox_label_ports" : "Ports (json|proto):",
+	"dashboard_infobox_label_ports" : "Port flatbuf:",
 	"dashboard_infobox_message_updatewarning" : "Eine aktuellere Version von Hyperion ist verfügbar! (V$1)",
 	"dashboard_infobox_message_updatesuccess" : "Du nutzt die aktuellste Version von Hyperion.",
 	"dashboard_infobox_label_statush" : "Hyperion Status:",
@@ -166,6 +166,7 @@
 	"conf_network_proto_intro" : "Der PROTO-Port dieser Hyperion-Instanz, wird genutzt für \"Bildstreams\" (HyperionScreenCap, Kodi Adddon, ...)",
 	"conf_network_bobl_intro" : "Boblight Empfänger",
 	"conf_network_udpl_intro" : "UDP Empfänger",
+	"conf_network_fbs_intro" : "Google Flatbuffers Empfänger. Wird genutzt für schnellen Bildempfang.",
 	"conf_network_forw_intro" : "Leite alles an eine zweite Hyperion Instanz weiter, diese kann dann mit einer anderen LED Steuerung genutzt werden",
 	"conf_logging_label_intro" : "Überprüfe die Meldungen im Prokotoll um zu erfahren was Hyperion gerade beschäftigt. Je nach eingestellter Protokoll-Stufe siehst du mehr oder weniger Informationen.",
 	"conf_logging_btn_pbupload" : "Bericht für Supportanfrage hochladen",
@@ -562,7 +563,7 @@
 	"edt_conf_fw_proto_expl" : "Ein Proto Ziel pro Zeile. Bestehend aus IP:PORT (Beispiel: 127.0.0.1:19447)",
 	"edt_conf_fw_proto_itemtitle" : "Proto Ziel",
 	"edt_conf_js_heading_title" : "JSON Server",
-	"edt_conf_ps_heading_title" : "PROTO Server",
+	"edt_conf_fbs_heading_title" : "Flatbuffers Server",
 	"edt_conf_bobls_heading_title" : "Boblight Server",
 	"edt_conf_udpl_heading_title" : "UDP Listener",
 	"edt_conf_udpl_address_title" : "Adresse",
