--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -47,7 +47,7 @@
 	"dashboard_infobox_label_latesthyp" : "Latest Hyperion version:",
 	"dashboard_infobox_label_platform" : "Platform:",
 	"dashboard_infobox_label_instance" : "Instance:",
-	"dashboard_infobox_label_ports" : "Ports (json|proto):",
+	"dashboard_infobox_label_ports" : "Port flatbuf:",
 	"dashboard_infobox_message_updatewarning" : "A newer version of Hyperion is available! ($1)",
 	"dashboard_infobox_message_updatesuccess" : "You run the latest version of Hyperion.",
 	"dashboard_infobox_label_statush" : "Hyperion status:",
@@ -166,6 +166,7 @@
 	"conf_network_proto_intro" : "The PROTO-Port of this Hyperion instance, used for picture streams (HyperionScreenCap, Kodi Adddon, ...)",
 	"conf_network_bobl_intro" : "Receiver for Boblight",
 	"conf_network_udpl_intro" : "Receiver for UDP",
+	"conf_network_fbs_intro" : "Google Flatbuffers Receiver. Used for fast image transmission.",
 	"conf_network_forw_intro" : "Forward all input to a second Hyperion instance which could be driven with another led controller",
 	"conf_logging_label_intro" : "Area to check log messages, depending on loglevel setting you see more or less information.",
 	"conf_logging_btn_pbupload" : "Upload report for support request",
@@ -563,7 +564,7 @@
 	"edt_conf_fw_proto_expl" : "One proto target per line. Contains IP:PORT (Example: 127.0.0.1:19447)",
 	"edt_conf_fw_proto_itemtitle" : "Proto target",
 	"edt_conf_js_heading_title" : "JSON Server",
-	"edt_conf_ps_heading_title" : "PROTO Server",
+	"edt_conf_fbs_heading_title" : "Flatbuffers Server",
 	"edt_conf_bobls_heading_title" : "Boblight Server",
 	"edt_conf_udpl_heading_title" : "UDP Listener",
 	"edt_conf_udpl_address_title" : "Address",
