--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -20,6 +20,7 @@
 	"general_comp_FORWARDER" : "Weiterleitung",
 	"general_comp_UDPLISTENER" : "UDP Listener",
 	"general_comp_BOBLIGHTSERVER" : "Boblight Server",
+	"general_comp_FLATBUFSERVER" : "Flatbuffers Server",
 	"general_comp_GRABBER" : "Plattform Aufnahme",
 	"general_comp_V4L" : "USB Aufnahme",
 	"general_comp_LEDDEVICE" : "LED Hardware",
@@ -163,7 +164,6 @@
 	"conf_colors_smoothing_intro" : "Glätte den Farbverlauf und Helligkeitsänderungen um nicht von schnellen Übergängen abgelenkt zu werden.",
 	"conf_colors_blackborder_intro" : "Ignoriere schwarze Balken, jeder Modus nutzt einen anderen Algorithmus um diese zu erkennen. Erhöhe die Schwelle, sollte es nicht funktionieren.",
 	"conf_network_json_intro" : "Der JSON-RPC-Port dieser Hyperion-Instanz, wird genutzt zur Fernsteuerung.",
-	"conf_network_proto_intro" : "Der PROTO-Port dieser Hyperion-Instanz, wird genutzt für \"Bildstreams\" (HyperionScreenCap, Kodi Adddon, ...)",
 	"conf_network_bobl_intro" : "Boblight Empfänger",
 	"conf_network_udpl_intro" : "UDP Empfänger",
 	"conf_network_fbs_intro" : "Google Flatbuffers Empfänger. Wird genutzt für schnellen Bildempfang.",
