--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -20,6 +20,7 @@
 	"general_comp_FORWARDER" : "Forwarder",
 	"general_comp_UDPLISTENER" : "UDP Listener",
 	"general_comp_BOBLIGHTSERVER" : "Boblight Server",
+	"general_comp_FLATBUFSERVER" : "Flatbuffers Server",
 	"general_comp_GRABBER" : "Platform Capture",
 	"general_comp_V4L" : "USB Capture",
 	"general_comp_LEDDEVICE" : "LED device",
@@ -163,7 +164,6 @@
 	"conf_colors_smoothing_intro" : "Smoothing flattens color/brightness changes to reduce annoying distraction.",
 	"conf_colors_blackborder_intro" : "Skip black bars wherever they are. Each mode use another detection algorithm which is tuned for special situations. Higher the threshold if it doesn't work for you.",
 	"conf_network_json_intro" : "The JSON-RPC-Port of this Hyperion instance, used for remote control.",
-	"conf_network_proto_intro" : "The PROTO-Port of this Hyperion instance, used for picture streams (HyperionScreenCap, Kodi Adddon, ...)",
 	"conf_network_bobl_intro" : "Receiver for Boblight",
 	"conf_network_udpl_intro" : "Receiver for UDP",
 	"conf_network_fbs_intro" : "Google Flatbuffers Receiver. Used for fast image transmission.",
