Add new white_algorithms to web UI

--- a/assets/webconfig/i18n/cs.json
+++ b/assets/webconfig/i18n/cs.json
@@ -294,7 +294,8 @@
     "wiz_cc_btn_stop": "Stopnout video",
     "wiz_cc_summary": "Závěr nastavení. Během přehrávání videa můžete znovu měnit nebo otestovat hodnoty. Pokud jste hotovi, klikněte na tlačítko Uložit.",
     "edt_dev_enum_subtract_minimum": "Odčtěte minimum",
-    "edt_dev_enum_sub_min_warm_adjust": "Teplota barvy",
+    "edt_dev_enum_sub_min_cool_adjust": "Teplota barvy: cool",
+    "edt_dev_enum_sub_min_warm_adjust": "Teplota barvy: warm",
     "edt_dev_enum_white_off": "Bílá vypnutá",
     "edt_dev_general_heading_title": "Obecné nastavení",
     "edt_dev_general_name_title": "Název konfigurace",
