--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -342,7 +342,8 @@
 	"wiz_cc_btn_stop" : "Stop video",
 	"wiz_cc_summary" : "A conclusion of your settings. During video playback, you could change or test values again. If you are done, click on save.",
 	"edt_dev_enum_subtract_minimum" : "Substract minimum",
-	"edt_dev_enum_sub_min_warm_adjust" : "Min warm adjust",
+	"edt_dev_enum_sub_min_cool_adjust" : "Subtract cool white",
+	"edt_dev_enum_sub_min_warm_adjust" : "Subtract warm white",
 	"edt_dev_enum_white_off" : "White off",
 	"edt_dev_general_heading_title" : "General Settings",
 	"edt_dev_general_name_title" : "Configuration name",
