--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -348,6 +348,7 @@
 	"wiz_cc_summary" : "Im folgenden eine Zusammenfassung deiner Einstellungen. Während du ein Video abspielst, kannst du hier weiter ausprobieren. Wenn du fertig bist, klicke auf speichern.",
 	"edt_dev_auth_key_title" : "Aurora API Schlüssel",
 	"edt_dev_enum_subtract_minimum" : "Subtrahiere minimum",
+	"edt_dev_enum_sub_min_cool_adjust" : "Minimale Anpassung: cool",
 	"edt_dev_enum_sub_min_warm_adjust" : "Minimale Anpassung: warm",
 	"edt_dev_enum_white_off" : "Weiß ist aus",
 	"edt_dev_general_heading_title" : "Allgemeine Einstellungen",
